stretched button fix

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ footer {
 .footer-content-wrapper {
   display: flex;
   justify-content: space-around;
-  align-content: center;
+  align-items: center;
 
 }
 
